@startuml

title __LOG121LAB2's Class Diagram__\n

  namespace bunco {
      class bunco.FactoryBunco {
          - nbDesBunco : int
          - nbToursBunco : int
          # creerDes()
          # creerJeu()
          # strategie()
      }
    }
  

  namespace bunco {
    class bunco.StrategieBunco {
            + calculerLeVainqueur()
            + calculerScoreTour()
    }
  }
  

  namespace framework {
      abstract class framework.ComparableCollection {
          - capacite : int
          - tabComparable : Comparable[]
          + add()
          + afficherComparables()
          + first()
          + isEmpty()
          + iterator()
          + last()
          + remove()
      }
    }


    namespace framework {
      class framework.De {
          - faceObtenue : int
          - nbFaces : int
          + compareTo()
      }
    }


    namespace framework {
      class framework.DeCollection {
          {static} - rand : Random
          + toutBrasser()
      }
    }


    namespace framework {
      abstract class framework.Factory {
          + creerPartie()
          # creerDes()
          # creerJeu()
          {abstract} # strategie()
          - creerPlayers()
      }
    }


    namespace framework {
      class framework.Jeu {
          - nbTours : int
          - tourActuel : int
          - des : DeCollection
          - players : PlayerCollection
          - playerActif : Player
          - strategie : Strategie
          + calculerLeVainqueur()
          + calculerScoreTour()
          + jouerPartie()
      }
    }


    namespace framework {
      class framework.Player {
          - name : String
          - score : int
          + compareTo()
      }
    }


    namespace framework {
      class framework.PlayerCollection {
          + afficherComparables()
          + triDecroissant()
      }
    }


    namespace framework {
      abstract class framework.Strategie {
          {abstract} + calculerLeVainqueur()
          {abstract} + calculerScoreTour()
      }
    }


    namespace framework {
      class framework.TabIterator {
          - tab : Object[]
          + goToHead()
          + hasNext()
          + next()
          + stepBack()
      }
    }
  

  namespace programmeTest {
    class programmeTest.TestMain {
    }
  }
  

  namespace tests {
    class tests.DeTest {
    }
  }
  

  namespace tests {
    class tests.JeuTest {
    }
  }
  

  namespace tests {
    class tests.PlayerTest {
    }
  }
  

  namespace tests {
    class tests.StrategieBuncoTest {
    }
  }
  

  bunco.FactoryBunco -up-|> framework.Factory
  bunco.StrategieBunco -up-|> framework.Strategie
  framework.ComparableCollection .up.|> java.util.Collection
  framework.De .up.|> java.lang.Comparable
  framework.DeCollection -up-|> framework.ComparableCollection
  framework.Jeu o-- framework.DeCollection
  framework.Jeu o-- framework.Player
  framework.Jeu o-- framework.PlayerCollection
  framework.Jeu o-- framework.Strategie
  framework.Player .up.|> java.lang.Comparable
  framework.PlayerCollection -up-|> framework.ComparableCollection
  framework.TabIterator .up.|> java.util.Iterator
  tests.DeTest o-- framework.De : de1
  tests.DeTest o-- framework.De : de2
  framework.DeCollection .up.> framework.TabIterator
  framework.PlayerCollection .up.> framework.TabIterator
  framework.ComparableCollection o-- java.lang.Comparable
  bunco.StrategieBunco .up.> framework.Jeu : connait
  framework.Factory .up.> framework.Jeu : instancie
  framework.Factory .up.> framework.DeCollection
  framework.Factory .up.> framework.PlayerCollection
  framework.Jeu .up.> java.util.Iterator : connait
  framework.DeCollection .up.> framework.De : connait

hide tests
hide programmeTest



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
